<!--
  ~ Copyright (c) 2022-2023 Universitat Politècnica de València
  ~ Authors: David de Andrés and Juan Carlos Ruiz
  ~          Fault-Tolerant Systems
  ~          Instituto ITACA
  ~          Universitat Politècnica de València
  ~
  ~ Distributed under MIT license
  ~ (See accompanying file LICENSE.txt)
  -->

<resources>
    <string name="app_name">Ex27_Maps</string>
    <!--Strings for the menu-->
    <string name="normal_map">Normal map</string>
    <string name="terrain_map">Terrain map</string>
    <string name="satellite_map">Satellite map</string>
    <string name="map_type">Type of map</string>
    <string name="add_markers">Enable adding markers</string>
    <string name="remove_markers">Enable removing markers</string>
    <string name="stop_markers_operation">Stop adding and removing markers</string>
    <!--Strings for the MarkerOptionsFragment-->
    <string name="latitude_title">Latitude:</string>
    <string name="longitude_title">Longitude:</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="slider_description">Select the color of the marker</string>
    <string name="color_title">Color:</string>
    <string name="add_marker">Add marker</string>
    <string name="no_title">You must provide a title.</string>
</resources>